// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenuItem is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenuItem__text"
    >
      Hello
    </span>
  </span>
</button>
`;

exports[`EuiContextMenuItem props disabled is rendered 1`] = `
<button
  class="euiContextMenuItem euiContextMenuItem-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`EuiContextMenuItem props hasPanel is rendered 1`] = `
<button
  class="euiContextMenuItem"
  type="button"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenuItem__text"
    />
    <svg
      class="euiIcon euiIcon--medium euiIcon-isLoading euiContextMenu__arrow"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </span>
</button>
`;

exports[`EuiContextMenuItem props href renders a link 1`] = `
<a
  aria-label="aria-label"
  class="euiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  href="url"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenuItem__text"
    />
  </span>
</a>
`;

exports[`EuiContextMenuItem props icon is rendered 1`] = `
<button
  class="euiContextMenuItem"
  type="button"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenu__icon"
    />
    <span
      class="euiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`EuiContextMenuItem props onClick renders a button 1`] = `
<button
  aria-label="aria-label"
  class="euiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`EuiContextMenuItem props rel is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  href="url"
  rel="help"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenuItem__text"
    />
  </span>
</a>
`;

exports[`EuiContextMenuItem props target is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  href="url"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiContextMenu__itemLayout"
  >
    <span
      class="euiContextMenuItem__text"
    />
  </span>
</a>
`;
